# professional-shogi-server

./: .gitignore  Cargo.toml  benchmark.sh
benchmark/: generate_data.sh  run.sh
benchmark/go/: httputil.sh  main.go
benchmark/rust/: default.sh  no-macro.sh
misc/: benchmark-main.sh  generate-data.sh  nginx.conf
misc/driver/rust/: default.sh  jemalloc-large-buffer.sh  jemalloc.sh  large-buffer.sh  no-chunked.sh
misc/go/: default.sh
src/: main.rs  proxy_service.rs  response_converter.rs
